--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,17 @@
-<p>
-  home works!
+<!-- el ng-container es un elemento oculto para 
+el usuario, es utilizado para poder agregar dos
+*ng"Tabliyas" en un solo html -->
+<br>
+<b>Amigos</b>
+<ng-container *ngFor="let user of friends; let i = index ">
+<p *ngIf="user.friend" >
+  {{ i + 1 }} , {{ user.nick }} - {{ user.email }}  
 </p>
+</ng-container>
+
+<b>No Amigos</b>
+<ng-container *ngFor="let user of friends; let i = index "> 
+<p *ngIf="!user.friend" >
+  {{ i + 1 }} , {{ user.nick }} - {{ user.email }}  
+</p>
+</ng-container>
